<resources>
    <string name="app_name">Course Booking</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="course_delete_confirmation_admin">Are you sure you want to delete course %1$s?</string>
    <string name="course_unassign_confirmation_instructor">Are you sure you want to remove yourself from teaching %1$s?</string>
    <string name="course_unenroll_confirmation_student">Are you sure you want to unenroll from course %1$s</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="main">MAIN</string>
    <string name="logout">logout</string>
    <string name="back">back</string>
    <string name="emailToDelete">Email</string>
    <string name="delete_user">delete user</string>
    <string name="pirates" />
    <string name="ninjas" />
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="if_you_don_t_have_an_account_you_can">If you don\'t have an account. You can</string>
    <string name="register_here">Register Here !</string>
    <string name="sign_in">Sign in</string>
    <string name="login_here">Login Here !</string>
    <string name="sign_up">Sign up</string>
    <string name="register">Register</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="name">Name</string>
    <string name="log_out">Log out</string>
    <string name="add_course">Add Course</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="course_name">Course name</string>
    <string name="course_code">Course code</string>
    <string name="course_instructor">Course instructor</string>
</resources>